--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
 [dependencies]
-clap = "3.0.0-beta.5"
-eframe = "0.15.0" # Gives us egui, epi and web+native backends
+clap = {version="4", features = ["derive"]}
+eframe = "0.21.3" # Gives us egui, epi and web+native backends
+three-d = "0.14.1"
+gchemol = { version = "0.1.3", features=["adhoc"] }
 
 [dev-dependencies]
 
